Updated language labels and fixed language layout bugs

--- a/app/client/stylus/app/call-tabs.styl
+++ b/app/client/stylus/app/call-tabs.styl
@@ -86,7 +86,7 @@
   font-size 17px
 #call-item-assigned
   height 46px
-  width 46px
+  width 54px
   top 2px
   right 2px
   font-size 19px
@@ -98,12 +98,12 @@
   line-height 30px !important
 #call-item-assigned-action
   height 14px
-  width 40px
+  width 48px
   top 26px
   font-size 11px
   right 0px
   background red
-  line-height 12px
+  line-height 15px
   opacity 0.5
   &:hover
     opacity 0.8
@@ -118,36 +118,21 @@
   left 8px
   background none
 #call-item-view-btn
-  right 51px
-  @media (min-width:1280px)
-    height 35px
-    top 7.5px
-    right 56px
-    width 80px
-    width 62px
-    line-height 35px
+  right 59px
+  width 100px
   &:hover
     opacity 0.8
 #call-item-action-btn
   top 26px
-  right 51px
-  @media (min-width:1280px)
-    height 35px
-    right 125px
-    width 82px
-    top 7.5px
-    line-height 35px
+  right 59px
+  width 100px
   background green
   &:hover
     opacity 0.8
 .call-item-btn-pending-action
   right 2px !important
-  @media (min-width:1280px)
-    right 4px !important
 .call-item-btn-pending-view
   right 2px !important
-  @media (min-width:1280px)
-    right 90px !important
 .call-item-btn-active-false
   background #989898 !important
   &:hover
