--- a/app/client/stylus/app/settings.styl
+++ b/app/client/stylus/app/settings.styl
@@ -4,7 +4,7 @@
   border-radius 5px
   box-sizing border-box
   position absolute
-  width 220px
+  width 250px
   height 185px
   right 2px
   top 40px
@@ -27,6 +27,7 @@
   color black
   font-size 21px
   cursor pointer
+  text-align center
   line-height 47px
   border-bottom 1px solid black
   &:hover
